hphp/hack/test/typecheck/class_const_generics.php.exp
File "class_const_generics.php", line 9, characters 4-11:
Type arguments are not allowed in this position (Parsing[1002])
